--- a/.atom/styles.less
+++ b/.atom/styles.less
@@ -2,7 +2,7 @@ atom-text-editor {
   text-rendering: optimizeLegibility;
 }
 
-atom-text-editor::shadow .string.quoted,
-atom-text-editor::shadow .string.regexp {
+atom-text-editor .string.quoted,
+atom-text-editor .string.regexp {
   -webkit-font-feature-settings: "liga" off, "calt" off;
 }
