improve packages and ligatures in atom

--- a/.atom/styles.less
+++ b/.atom/styles.less
@@ -2,7 +2,8 @@ atom-text-editor {
   text-rendering: optimizeLegibility;
 }
 
-atom-text-editor .string.quoted,
-atom-text-editor .string.regexp {
+atom-text-editor.editor .syntax--string.syntax--quoted,
+atom-text-editor.editor .syntax--string.syntax--regexp,
+atom-text-editor.editor .syntax--markdown {
   -webkit-font-feature-settings: "liga" off, "calt" off;
 }
